fixed bottom white space

--- a/src/Body/SongRow/songrow.css
+++ b/src/Body/SongRow/songrow.css
@@ -1,12 +1,16 @@
 .songRow {
 	margin-left: 20px;
+	margin-right: 20px;
 	padding: 20px;
 	display: flex;
 	align-items: center;
 	z-index: 100;
 	color: white;
+	border-radius: 5px;
 }
-
+.songRow:last-child {
+	margin-bottom: 90px;
+}
 .songRow:hover {
 	cursor: pointer;
 	background-color: black;
