--- a/src/Body/body.css
+++ b/src/Body/body.css
@@ -1,6 +1,8 @@
 .body {
 	height: 100vh;
-	padding: 30px;
+	max-height: 100vh;
+	padding-left: 30px;
+	padding-right: 30px;
 	flex: 0.9;
 	overflow-y: overlay;
 	background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0, 1));
