--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
 	height: 100vh;
-	padding: 30px;
+	padding: 0 30px;
 	flex: 0.9;
 	overflow-y: overlay;
 	background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0, 1));
@@ -15,4 +15,8 @@
 	flex-wrap: nowrap;
 	overflow-x: auto;
 	padding: 10px;
+}
+
+.home__categories:last-child {
+	margin-bottom: 100px;
 }
